fix: hide scrollbar

--- a/gojirun/app/globals.css
+++ b/gojirun/app/globals.css
@@ -6,6 +6,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    display: none;
+    background: transparent; /* make scrollbar transparent */
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
